--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-logs
 lmdb
-face_recognition/face/logs
-face_recognition/face/model_store
-face_recognition/face/weight
-face_recognition/face/util.zip
+**/logs/
+**/model_store/
+**/weight/
 **/__pycache__/
 *.env
 *.pyc
 **/.idea/
+**/migrations/
+key.env
+*.zip
