--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@ lmdb
 **/logs/
 **/model_store/
 **/weight/
-**/__pycache__/
+__pycache__/
 *.env
 *.pyc
-**/.idea/
+.idea/
 **/migrations/
 key.env
 *.zip
+*.jpeg
+*.jpg
