--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,14 @@ gdown==5.2.0
 joblib==1.4.2
 kombu==5.4.0
 lmdb==1.5.1
-numpy==1.24.1
+numpy==1.26.4
 Pillow==10.2.0
 pymongo==4.8.0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 redis==5.0.8
 Requests==2.32.3
-rest_framework_simplejwt==0.0.2
+djangorestframework-simplejwt
 seaborn==0.13.2
 torch==2.2.0
 torchvision==0.17.0
@@ -21,3 +21,8 @@ ts==0.5.1
 ultocr==0.3.1
 ultralytics==8.2.83
 wheel==0.44.0
+torch-model-archiver==0.11.1
+torch-workflow-archiver==0.2.14
+mlflow==2.15.1
+nvgpu==0.10.0
+umap-learn==0.5.6
