--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ python-dotenv==1.0.1
 PyYAML==6.0.2
 redis==5.0.8
 Requests==2.32.3
-djangorestframework-simplejwt
+djangorestframework-simplejwt==5.3.1
 seaborn==0.13.2
 torch==2.2.0
 torchvision==0.17.0
@@ -26,3 +26,4 @@ torch-workflow-archiver==0.2.14
 mlflow==2.15.1
 nvgpu==0.10.0
 umap-learn==0.5.6
+django-extensions==3.2.3
